[project]
name = "proton_to_keepass"
version = "1.0.0"
authors = [
  { name="Cameron MacDonald", email="pypi.ember745@passmail.net" },
]
description = "Convert Proton Pass exports to KeePass databases securely for encrypted local backup."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
keywords = ["proton", "pass", "password", "manager", "keepass", "convert", "converter", "conversion"]
dependencies = [
  "argon2-cffi==23.1.0",
  "argon2-cffi-bindings==21.2.0",
  "cffi==1.16.0",
  "construct==2.10.70",
  "lxml==5.1.0",
  "psutil==5.9.8",
  "pycparser==2.21",
  "pycryptodomex==3.20.0",
  "pykeepass==4.0.6",
  "python-dateutil==2.8.2",
  "python-gnupg==0.5.2",
  "six==1.16.0"
]

[project.urls]
Homepage = "https://github.com/cadomac/Proton-To-KeePass"
Issues = "https://github.com/cadomac/Proton-To-KeePass/issues"