[project]
name = "proton-to-keepass"
version = "1.0.0"
description = "Convert Proton Pass exports to KeePass databases securely"
authors = [
    {name = "Cameron MacDonald",email = "12107773+cadomac@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "argon2-cffi==23.1.0",
  "argon2-cffi-bindings==21.2.0",
  "cffi==1.16.0",
  "construct==2.10.70",
  "lxml==5.1.0",
  "psutil==5.9.8",
  "pycparser==2.21",
  "pycryptodomex==3.20.0",
  "pykeepass==4.0.6",
  "python-dateutil==2.8.2",
  "python-gnupg==0.5.2",
  "six==1.16.0"
]

[project.urls]
Homepage = "https://github.com/cadomac/Proton-To-KeePass"
Issues = "https://github.com/cadomac/Proton-To-KeePass/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
